# cpp2sqlite

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  aips.cpp  aips.hpp  atc.cpp  atc.hpp  bag.cpp  bag.hpp  beautify.cpp  beautify.hpp  build  cpp2sqlite.cpp  epha.cpp  epha.hpp  gtin.cpp  gtin.hpp  medicine.h  peddose.cpp  peddose.hpp  refdata.cpp  refdata.hpp  report.cpp  report.hpp  sqlDatabase.cpp  sqlDatabase.hpp  swissmedic.cpp  swissmedic.hpp
input/: atc_codes_multi_lingual.txt  atc_ddd_2019.csv  deepl.drugshortage.in.txt  deepl.drugshortage.out.fr.txt  deepl.in.txt  deepl.out.fr.txt  deepl.out2.fr.txt  deepl.sappinfo.out.fr.txt  sappinfo.xlsx  swisspeddose_blacklist.txt
scripts/: build.sh  deepl.sh  download.sh  download_private.sh  download_zr.sh  ref.xml  steps_public1.source  steps_public2.source
src/: bag.cpp  bag.hpp  bagFHIR.cpp  bagFHIR.hpp  beautify.cpp  beautify.hpp  gtin.cpp  gtin.hpp  report.cpp  report.hpp  sqlDatabase.cpp  sqlDatabase.hpp
src/c2s/: aips.cpp  aips.hpp  atc.cpp  atc.hpp  batchrecalls.cpp  batchrecalls.hpp  beautify.hpp  cpp2sqlite.cpp  dhcphpcbatchrecalls.cpp  dhcphpcbatchrecalls.hpp  dhpchpc.cpp  dhpchpc.hpp  drugshortage.cpp  drugshortage.hpp  epha.cpp  html_tags.h  medicine.h  peddose.cpp  peddose.hpp  refdata.cpp  refdata.hpp  report.cpp  report.hpp  sappinfo.cpp  sappinfo.hpp  sqlDatabase.cpp  sqlDatabase.hpp  swissmedic.cpp  swissmedic.hpp  swissreg.cpp  swissreg.hpp
src/dru/: main.cpp
src/int/: atc.cpp  atc.hpp  main.cpp
src/int/lang/: de.h  en.h  fr.h
src/nonpharma/: main.cpp  transfer.cpp  transfer.hpp
src/pha/: aips.cpp  aips.hpp  ddd.cpp  ddd.hpp  main.cpp  refdata.cpp  refdata.hpp  swissmedic.cpp  swissmedic.hpp  swissmedic1.cpp  swissmedic1.hpp  swissmedic2.cpp  swissmedic2.hpp
src/sai/: adressen.cpp  adressen.hpp  bag.cpp  bag.hpp  deklarationen.cpp  deklarationen.hpp  main.cpp  praeparate.cpp  praeparate.hpp  sai.cpp  sai.hpp  sequenzen.cpp  sequenzen.hpp  stoffsynonyme.cpp  stoffsynonyme.hpp
src/sap/: main.cpp
src/zur/: Article.cpp  Article.hpp  atc.cpp  atc.hpp  bag.cpp  bag.hpp  direkt.cpp  direkt.hpp  galen.cpp  galen.hpp  generika.cpp  generika.hpp  gripp.cpp  gripp.hpp  kunden.cpp  kunden.hpp  main.cpp  neu.cpp  neu.hpp  nota.cpp  nota.hpp  sqlDatabase.cpp  sqlDatabase.hpp  stamm.cpp  stamm.hpp  swissmedic.cpp  swissmedic.hpp  voll.cpp  voll.hpp
